test: restructure CsvStreamBuilder suite with nested behavior groups